--- a/views/item/list.ejs
+++ b/views/item/list.ejs
@@ -25,7 +25,7 @@
                     <td>
                         <a href="/items/edit/<%= item.id %>">Edit</a>
                         <form action="/items/delete/<%= item.id %>" method="post">
-                            <input type="submit" name="delete" value="Delete" onclick="return confrm('Delete item?')">
+                            <input type="submit" name="delete" value="Delete">
                             <input type="hidden" name="_method" value="DELETE">
                         </form>
                     </td>                  
