Fetching an item for update done

--- a/views/item/edit.ejs
+++ b/views/item/edit.ejs
@@ -16,7 +16,7 @@
         </tr>
         <tr>
             <td>Quantity</td>
-            <td><input type="text" name="quantity" id="quantity" value="<%= quantity %>"></td>
+            <td><input type="text" name="qty" id="qty" value="<%= qty %>"></td>
         </tr>
         <tr>
             <td>Amount</td>
@@ -24,7 +24,7 @@
         </tr>
         <tr>
             <td></td>
-            <td><input type="Submit" name="Submit" value="Add"></td>
+            <td><input type="Submit" name="Submit" value="Update"></td>
         </tr>
         <input type="hidden" name="_method" value="PUT">
     </table>
